@@ -1,3 +1,8 @@
+2007-04-13  John W. Eaton  <jwe@octave.org>
+
+	* Array.cc (Array<T>::maybe_delete_elements_2): Don't return early
+	for empty matrix.  Only check for colon index equivalence if not empty.
+
 2007-04-10  John W. Eaton  <jwe@octave.org>
 
 	* SparseCmplxQR.cc
